<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/orderText"
        android:layout_width="258dp"
        android:layout_height="42dp"
        android:text="@string/order_your_tosti_here"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <Button
        android:id="@+id/orderBtn"
        android:layout_width="161dp"
        android:layout_height="67dp"
        android:text="@string/order_0_60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />

    <TextView
        android:id="@+id/enterNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/orderBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderText"
        app:layout_constraintVertical_bias="0.031" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameField"
        android:layout_width="323dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toTopOf="@+id/orderBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterNameText"
        app:layout_constraintVertical_bias="0.01999998">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="267dp"
        android:layout_height="42dp"
        android:indeterminate="false"
        android:max="2"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/orderBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameField"
        app:layout_constraintVertical_bias="0.284" />

    <TextView
        android:id="@+id/howManyText"
        android:layout_width="395dp"
        android:layout_height="29dp"
        android:text="@string/how_many_tosti_s_would_you_like_to_order"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameField"
        app:layout_constraintVertical_bias="0.75" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="302dp"
        android:layout_height="142dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/orderBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar">

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="30dp"

            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tosti1Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/tosti_1" />

            <CheckBox
                android:id="@+id/checkBoxHam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:checked="true"
                android:text="@string/ham" />

            <CheckBox
                android:id="@+id/checkBoxCheese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:checked="true"
                android:text="@string/cheese" />
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tosti2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/tosti_2" />

            <CheckBox
                android:id="@+id/checkBoxHam2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:checked="true"
                android:text="@string/ham" />

            <CheckBox
                android:id="@+id/checkBoxCheese2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:checked="true"
                android:text="@string/cheese" />

        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tosti3Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/tosti_3" />

            <CheckBox
                android:id="@+id/checkBoxHam3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:checked="true"
                android:text="@string/ham" />

            <CheckBox
                android:id="@+id/checkBoxCheese3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:checked="true"
                android:text="@string/cheese" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/SeekBarText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/_1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/SeekBarText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/_3"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/SeekBarText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

</androidx.constraintlayout.widget.ConstraintLayout>